@@ -1,7 +1,7 @@
 
 module Rufus
 module Doric
-  VERSION = '0.1.5'
+  VERSION = '0.1.6'
 end
 end
 
