@@ -5,7 +5,7 @@
 
 Gem::Specification.new do |s|
   s.name = %q{rufus-doric}
-  s.version = "0.1.5"
+  s.version = "0.1.6"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["John Mettraux"]
